# MitaiEngine

./: .gitignore  CMakeLists.txt  CMakeLists_dist.txt  PROGRESS.md  README.md  build.ps1  build_dist.ps1  build_release.ps1  imgui.ini  log.txt  log_utf8.txt  out.txt  setup_assets.ps1
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/: Application.h  Camera.h  Collider.h  Entity.h  Geometry.h  IBLBaker.h  Mesh.h  Model.h  PhysicsSystem.h  Renderer.h  ResourceManager.h  Scene.h  Shader.h
include/glad/: glad.h
shaders/: adv_f.glsl  adv_g.glsl  adv_gbuffer_f.glsl  adv_point_shadow_g.glsl  adv_tc.glsl  adv_te.glsl  adv_v.glsl  brdf_f.glsl  brdf_v.glsl  cubemap_v.glsl  deferred_lighting_f.glsl  forward_water_f.glsl  fragment.glsl  gbuffer_f.glsl  irradiance_f.glsl  particle_f.glsl  particle_g.glsl  particle_tc.glsl  particle_te.glsl  particle_v.glsl  point_shadow_f.glsl  point_shadow_g.glsl  point_shadow_v.glsl  prefilter_f.glsl  shadow_f.glsl  shadow_v.glsl  skinning_v.glsl  skybox_f.glsl  skybox_v.glsl  unlit_f.glsl  vertex.glsl
src/: Application.cpp  PhysicsSystem.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  glad.c  main.cpp  stb_image.cpp
